--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "angular-ui-bootstrap": "^2.5.6",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
+    "connect-redis": "^3.3.2",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "passport": "^0.4.0",
     "passport-github2": "^0.1.11",
+    "unirest": "^0.5.1",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
