--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ github:
     secret: 
   api:
     token: # api token of the Thelemic User account with org write access
-  base: http://localhost:4000
+  base: https://api.github.com
 
 template:
   enforce_template: 
