--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jquery": "^3.2.1",
     "passport": "^0.4.0",
     "passport-github2": "^0.1.11",
+    "sequence": "^3.0.0",
     "unirest": "^0.5.1",
     "yamljs": "^0.3.0"
   },
