--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "angular-route": "^1.6.7",
     "angular-ui-bootstrap": "^2.5.6",
     "body-parser": "^1.18.2",
-    "bootstrap": "^3.3.7",
     "connect-redis": "^3.3.2",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
@@ -41,6 +40,7 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "bootstrap-sass": "^3.3.7",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-ng-annotate": "^2.0.0",
