--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "jsonwebtoken": "^8.1.1",
     "passport": "^0.4.0",
     "passport-github2": "^0.1.11",
     "sequence": "^3.0.0",
