--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "angular-route": "^1.6.7",
     "angular-ui-bootstrap": "^2.5.6",
     "body-parser": "^1.18.2",
-    "connect-redis": "^3.3.2",
+    "connect-redis": "^3.3.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^8.1.1",
     "passport": "^0.4.0",
     "passport-github2": "^0.1.11",
+    "redis": "^2.8.0",
     "sequence": "^3.0.0",
     "unirest": "^0.5.1",
     "yamljs": "^0.3.0"
