--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "redis": "^2.8.0",
     "sequence": "^3.0.0",
     "unirest": "^0.5.1",
+    "winston": "^2.4.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
