--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-### Thelemic configuration file
+### limnetic configuration file
 
 # you can define your yaml anchors here for easier access in your configuration
 _anchors:
@@ -14,7 +14,7 @@ _anchors:
 
 # Basic Application configuration
 application:
-  name: Thelemic
+  name: limnetic
   port: 3000 # application port
 
 # Session Configuration
@@ -35,9 +35,9 @@ session:
 ## GitHub App configuration
 github:
   oauth: # GitHub App OAuth settings
-    id: # the open auth id of your GitHub app
-    secret: # the open auth secret of your GitHub app
-  appId: # The AppId of your GitHub app instance (not installation!)
+    id:  # the open auth id of your GitHub app
+    secret:  # the open auth secret of your GitHub app
+  appId:  # The AppId of your GitHub app instance (not installation!)
   keyFile: github-app.pem # the key file of your GitHub App (you retrieve this from the App settings page)
   base: https://api.github.com # Github Api base url
 
