feat: add code owner review display

--- a/config.yml
+++ b/config.yml
@@ -92,6 +92,7 @@ template:
           contexts: []
         required_pull_request_reviews:
           dismiss_stale_reviews: true
+          require_code_owner_reviews: true
         enforce_admins:
         restrictions:
 
