--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive"
   },
   "repository": {
     "type": "git",
@@ -45,10 +45,13 @@
   },
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
+    "chai": "^4.1.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.2"
+    "gulp-sourcemaps": "^2.6.2",
+    "mocha": "^5.0.1",
+    "sinon": "^4.3.0"
   }
 }
