--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "gulp",
     "watch": "gulp watch",
-    "test": "mocha"
+    "test": "mocha",
+    "coverage": "nyc mocha"
   },
   "repository": {
     "type": "git",
@@ -53,6 +54,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.2",
     "mocha": "^5.0.1",
+    "nyc": "^11.4.1",
     "sinon": "^4.3.0"
   }
 }
