--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "gulp",
     "watch": "gulp watch",
     "test": "mocha",
-    "coverage": "nyc mocha"
+    "coverage": "nyc --all mocha",
+    "coverage-report": "nyc --all --reporter=html --reporter=text mocha"
   },
   "repository": {
     "type": "git",
@@ -40,7 +41,6 @@
     "passport": "^0.4.0",
     "passport-github2": "^0.1.11",
     "redis": "^2.8.0",
-    "sequence": "^3.0.0",
     "unirest": "^0.5.1",
     "winston": "^2.4.0",
     "yamljs": "^0.3.0"
@@ -48,6 +48,7 @@
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-ng-annotate": "^2.0.0",
@@ -56,5 +57,14 @@
     "mocha": "^5.0.1",
     "nyc": "^11.4.1",
     "sinon": "^4.3.0"
+  },
+  "nyc": {
+    "exclude": [
+      "mock",
+      "test",
+      "dist",
+      "src",
+      "gulpfile.js"
+    ]
   }
 }
