--- a/config.yml
+++ b/config.yml
@@ -36,9 +36,9 @@ session:
 #   You can configure these settings via environment variables
 github:
   oauth: # GitHub App OAuth settings
-    id: 1 # the open auth id of your GitHub app
-    secret: 1 # the open auth secret of your GitHub app
-  appId: 1 # The AppId of your GitHub app instance (not installation!)
+    id:  # the open auth id of your GitHub app
+    secret:  # the open auth secret of your GitHub app
+  appId:  # The AppId of your GitHub app instance (not installation!)
   keyFile: github-app.pem # the key file of your GitHub App (you retrieve this from the App settings page)
   base: https://api.github.com # Github Api base url
 
