--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "gulp watch",
     "test": "mocha",
     "coverage": "nyc --all mocha",
-    "coverage-report": "nyc --all --reporter=html --reporter=text mocha"
+    "coverage-report": "nyc --all --reporter=html --reporter=lcov --reporter=text mocha"
   },
   "repository": {
     "type": "git",
