--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "gulp",
     "watch": "gulp watch",
     "test": "mocha",
+    "lint": "eslint .",
     "coverage": "nyc --all mocha",
     "coverage-report": "nyc --all --reporter=html --reporter=lcov --reporter=text mocha"
   },
@@ -49,6 +50,8 @@
     "bootstrap-sass": "^3.3.7",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "eslint": "^4.18.2",
+    "eslint-config-google": "^0.9.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-ng-annotate": "^2.0.0",
