--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "gulp",
-    "watch": "gulp watch",
-    "test": "mocha",
-    "lint": "eslint .",
-    "coverage": "nyc --all mocha",
-    "coverage-report": "nyc --all --reporter=html --reporter=lcov --reporter=text mocha"
+    "start": "npm run build && nodemon bin/main.js",
+    "build": "npm run build-ts && npm run tslint",
+    "test": "ts-mocha",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "debug": "npm run build && npm run watch-debug",
+    "release": "semantic-release"
   },
   "repository": {
     "type": "git",
@@ -27,47 +29,34 @@
   },
   "homepage": "https://github.com/error418/tirolesa#readme",
   "dependencies": {
-    "angular": "^1.6.7",
-    "angular-animate": "^1.6.7",
-    "angular-resource": "^1.6.7",
-    "angular-route": "^1.6.7",
-    "angular-ui-bootstrap": "^2.5.6",
+    "@octokit/rest": "^15.17.0",
+    "arroyo": "file:../arroyo",
     "body-parser": "^1.18.2",
-    "connect-redis": "^3.3.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.2.1",
     "jsonwebtoken": "^8.1.1",
     "passport": "^0.4.0",
     "passport-github2": "^0.1.11",
-    "redis": "^2.8.0",
-    "unirest": "^0.5.1",
-    "winston": "^2.4.0",
+    "winston": "^3.1.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "bootstrap-sass": "^3.3.7",
+    "@types/chai": "^4.1.3",
+    "@types/compression": "0.0.36",
+    "@types/express": "^4.11.1",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.12.9",
+    "@types/sinon": "^5.0.6",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^4.18.2",
-    "eslint-config-google": "^0.9.1",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-ng-annotate": "^2.0.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.2",
-    "mocha": "^5.0.1",
-    "nyc": "^11.4.1",
-    "sinon": "^4.3.0"
-  },
-  "nyc": {
-    "exclude": [
-      "mock",
-      "test",
-      "dist",
-      "src",
-      "gulpfile.js"
-    ]
+    "eslint": "^5.9.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.17.3",
+    "semantic-release": "^15.5.4",
+    "sinon": "^7.1.1",
+    "sinon-chai": "^3.2.0",
+    "ts-mocha": "^2.0.0",
+    "tslint": "^5.9.1",
+    "typescript": "^3.1.6"
   }
 }
